tests/type/bad/literal_float_as_int.hel
foreign io_unit: IO<()>;

x: i32 = 1.0;

main = io_unit;
